# stophammer

./: Cargo.toml  Dockerfile  Dockerfile.build  README.md  docker-compose.e2e-tls.yml  docker-compose.e2e.yml  install.sh  stophammer.env.example  stophammer.service
.github/workflows/: ci.yml  release.yml
docs/adr/: 0007-cloudflare-tracker-bootstrap.md  0008-cloudflare-tracker-implementation.md  0009-community-node-mode.md  0010-distribution-and-deployment.md  0011-rss-crawler.md  0012-podping-listener.md  0015-verifier-plugin-architecture.md  0016-push-gossip-tracker-elimination.md  0018-proof-of-possession-mutations.md  0019-tls-acme-let-s-encrypt.md  0022-fts5-search-architecture.md
src/: api.rs  apply.rs  community.rs  db.rs  event.rs  ingest.rs  main.rs  model.rs  proof.rs  quality.rs  query.rs  schema.sql  search.rs  signing.rs  sync.rs  tls.rs  verify.rs
src/verifiers/: content_hash.rs  crawl_token.rs  enclosure_type.rs  feed_guid.rs  mod.rs  (+2 more)
tests/: apply_batch_tests.rs  apply_tests.rs  artist_credit_tests.rs  availability_tests.rs  coverage_gap_tests.rs  db_tests.rs  e2e_docker_compose_tests.sh  e2e_tests.rs  event_tests.rs  external_id_tests.rs  finding5_reconcile_pagination_tests.rs  load_test.js  load_test.sh  proof_tests.rs  push_bounded_tests.rs  query_tests.rs  redirect_tests.rs  regression_tests.rs  relationship_tests.rs  search_tests.rs  signing_tests.rs  sprint3b_tests.rs  ssrf_redirect_tests.rs  sync_reconcile_auth_tests.rs  sync_register_ssrf_tests.rs  tag_tests.rs  tls_tests.rs  track_tests.rs  verifier_reader_tests.rs  verifier_tests.rs
(+3 files in other folders)
